update format file (W726)

--- a/formats/digital_native_symbolist_class_struggle_complete.html
+++ b/formats/digital_native_symbolist_class_struggle_complete.html
@@ -180,9 +180,11 @@
 </div>
 <h1 id="chapter-1">Chapter 1</h1>
 <h2 id="chapter-1-1">CHAPTER 1</h2>
-<p>The first thing you learn is the silence. Not the absence of
-sound—the city is a constant, wet roar—but the silence of the symbols.
-They stop talking to you.</p>
+<p>Kaito’s first memory was a server hum. Not a lullaby, not a parent’s
+voice—the low, cooling thrum of the data stacks that raised him. It
+vibrated up through the floor grates into his bones, a constant
+reminder: you are a product of this machine, and your worth is measured
+in processing cycles you do not own.</p>
 <p>Miro was nine when the public mural on the south wall of the Parnell
 Street substation went quiet. One morning, it was just paint. The night
 before, the coiled green serpent in the design had whispered a clear,
